# OpenUtauMobile

./: .editorconfig  .gitignore  Directory.Build.props  LICENSE  LICENSE.txt  OpenUtauMobile.sln  PopupFeatures.md  PopupFeatures_zh.md  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  UIIntroductions.md  UIIntroductions_zh.md
.agent/: AGENT_WORKFLOW.md  DECISIONS.md  README.md
.agent/context/: GENERAL.ctx.md  INDEX.md  MODULE_INDEX.ctx.json  PLATFORMS.ctx.md  TODO.ctx.md
.github/: build-android-dev.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_en.yml
.github/workflows/: build-android-dev.yml  main.yml
OpenUtau.Core/: .editorconfig  DependencyInstaller.cs  DocManager.cs  OpenUtau.Core.csproj  PlaybackManager.cs  README.md  SingerManager.cs
OpenUtau.Core/Api/: PhonemizerRunner.cs
OpenUtau.Core/Audio/: MiniAudioOutput.cs  NAudioOutput.cs
OpenUtau.Core/Classic/: ClassicSinger.cs  SharpWavtool.cs
OpenUtau.Core/Commands/: Notifications.cs  ProjectCommands.cs
OpenUtau.Core/DiffSinger/: DiffSingerSinger.cs
OpenUtau.Core/Enunu/: EnunuSinger.cs
OpenUtau.Core/Format/: USTx.cs  Wave.cs
OpenUtau.Core/Render/: Renderers.cs  Worldline.cs
OpenUtau.Core/SignalChain/: ExportAdapter.cs  MasterAdapter.cs
OpenUtau.Core/Ustx/: UPart.cs  UPhoneme.cs  UProject.cs  UTrack.cs
OpenUtau.Core/Util/: BuildInfo.cs  DependencyManager.cs  FileTools.cs  PathManager.cs  Preferences.cs  TimeAxis.cs
OpenUtau.Core/Vogen/: VogenSinger.cs  VogenSingerInstaller.cs
OpenUtau.Core/Voicevox/: VoicevoxSinger.cs
OpenUtau.Plugin.Builtin/: OpenUtau.Plugin.Builtin.csproj
OpenUtau.Plugin.Builtin/Data/: Resources.Designer.cs
OpenUtauMobile/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  GlobalErrorSubscriber.cs  Linker.xml  MauiProgram.cs  OpenUtauMobile.csproj  ViewConstants.cs  ViewLocator.cs
OpenUtauMobile.Android/: MainActivity.cs  OpenUtauMobile.Android.csproj
OpenUtauMobile.Android/Audio/: AudioTrackOutput.cs
OpenUtauMobile.Android/Properties/: AndroidManifest.xml
OpenUtauMobile.Android/Storage/: AndroidExternalStorageService.cs
OpenUtauMobile.Browser/: OpenUtauMobile.Browser.csproj  Program.cs
OpenUtauMobile.Browser/Properties/: launchSettings.json
OpenUtauMobile.Browser/wwwroot/: index.html
OpenUtauMobile.Linux/: OpenUtauMobile.Linux.csproj  Program.cs
OpenUtauMobile.Linux/Storage/: LinuxExternalStorageService.cs
OpenUtauMobile.MacOS/: OpenUtauMobile.MacOS.csproj  Program.cs
OpenUtauMobile.Plugin.Renderers/: OpenUtauMobile.Plugin.Renderers.csproj
OpenUtauMobile.Windows/: OpenUtauMobile.Windows.csproj  Program.cs  app.manifest
OpenUtauMobile.iOS/: AppDelegate.cs  Info.plist  Main.cs  OpenUtauMobile.iOS.csproj
cpp/: .gitignore  README.md
cpp/worldline/: .gitignore  CMakeLists.txt  README.md  README_zh.md  phrase_synth.h  synth_request.h  worldline.cpp  worldline.h
cpp/worldline/scripts/: build_device_arm64.sh  build_sim_arm64.sh  build_sim_x86.sh  build_xcframework.sh  build_xcframework_all.sh
cpp/worldline/world/: common.h  constantnumbers.h  matlabfunctions.h
(+336 files in other folders)
